<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PoE Events</string>
    <string name="action_settings">Settings</string>
    <string name="error">ERROR</string>
    <string name="event_name">Event Name</string>
    <string name="starts">"Starts:"</string>
    <string name="ends">"Ends:"</string>
    <string name="starts_short">"S:"</string>
    <string name="ends_short">"E:"</string>
    <string name="no_forum_link">"No forum link yet"</string>
    <string name="refresh">Refresh</string>
    <string name="no_events">No Events</string>
    <string name="competitive">Competitive</string>
    <string name="signature">Signature</string>
    <string name="fun">Fun</string>
    <string name="starts_at">Starts at %1$s</string>

</resources>
