<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_selector"
    android:orientation="vertical"
    android:padding="8dp" >

    <TextView
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/event_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:paddingRight="8dp"
                android:text="@string/starts"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/event_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/error"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_color" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:paddingRight="8dp"
                android:text="@string/ends"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/event_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/error"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_color" />
        </TableRow>
    </TableLayout>

</LinearLayout>